src/objects/P7S1_SAT__c.object
<CustomObject>
    <description>Backup the Setup Audit Trail for Reporting and Monitoring</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedById</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>SAT</relationshipLabel>
        <relationshipName>Setup_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DelegateUser__c</fullName>
        <label>DelegateUser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <label>Display</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Setup Audit Trail</label>
    <nameField>
        <displayFormat>SAT-{00000000}</displayFormat>
        <label>Setup Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>